--- a/dnd/index.html
+++ b/dnd/index.html
@@ -15,7 +15,7 @@
 
 		<h1>Which Spell?</h1>
 		<input type="text" name="" value="">
-		<button type="button" name="button">Get Spell Data</button>
+		<button type="button" name="button" class="button">Get Spell Data</button>
 
 		<h2>Name?</h2>
 		<h3>Class?</h3>
